<resources>
    <string name="app_name">CodeGank</string>

    <string name="quit_again">再按一次退出</string>
    <string name="transition_name_welfare">welfare</string>
    <string name="transition_name_title">title</string>
    <string name="tip">提示</string>
    <string name="deny">拒绝</string>
    <string name="allow">允许</string>
    <string name="version">V %s</string>

    <!-- 侧边栏菜单 -->
    <string name="home">主页</string>
    <string name="category">分类</string>
    <string name="random">随机</string>
    <string name="random_">随机--%s</string>
    <string name="collections">收藏</string>
    <string name="android">Android</string>
    <string name="ios">iOS</string>
    <string name="web">前端</string>
    <string name="other_resource">拓展资源</string>
    <string name="app">App</string>
    <string name="more">瞎推荐</string>
    <string name="welfare">福利</string>
    <string name="rest_video">休息视频</string>
    <string name="all">all</string>
    <string name="settings">设置</string>
    <string name="about">关于</string>
    <string name="other">其它</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- 搜索 -->
    <string name="search">搜索</string>
    <string name="search_hint">请输入关键字</string>

    <!-- 福利详情 -->
    <string name="share">分享</string>
    <string name="save_img">保存图片</string>
    <string name="save_as_wallpaper">设为壁纸</string>
    <string name="welfare_had_save_to">图片成功保存到%s文件夹!</string>
    <string name="set_welfare_to_wallpaper_success">设置壁纸成功!</string>
    <string name="chooser_wallpaper">选择壁纸来源</string>
    <string name="request_write_external_storage_permission">同意CodeGank请求读写权限才能保存图片</string>
    <string name="you_have_refused_permission">你已经拒绝了应用申请权限！</string>
    <string name="share_to">分享到</string>

    <!-- 设置 -->
    <string name="setting">设置</string>
    <string name="flow_control">流量控制</string>
    <string name="smart_no_pic_model">智能无图模式</string>
    <string name="smart_no_pic_model_detail">使用数据流量时不加载图片</string>
    <string name="browse_control">浏览设置</string>
    <string name="use_chrome_custom_tab">使用chrome custom tabs查看</string>
    <string name="use_chrome_custom_tab_detail">浏览干货详情时，不使用系统WebView，通过chrome custom tab查看</string>
    <string name="clear_data">清理数据</string>
    <string name="quit_clear_cache">退出时清理缓存</string>
    <string name="quit_clear_cache_detail">将在每次退出应用都清理缓存</string>
    <string name="clear_cache">清除缓存</string>
    <string name="clear_cache_detail">立即清除应用图片等缓存</string>
    <string name="go_to_download_chrome">去下载Chrome</string>
    <string name="custom_tabs_need_chrome">Custom Tabs需要Chrome浏览器提供技术支持</string>
    <string name="smart_no_pic_support_webView">暂不支持Chrome Custom Tabs，Chrome流量控制可在Chrome-设置-流量节省程序中设置</string>
    <string name="smart_no_pic_support_webView_custom_tabs">Chrome Custom Tabs暂不支持智能无图模式，请先关闭智能无图模式</string>

    <!-- 干货详情 -->
    <string name="copy_link">复制链接</string>
    <string name="open_in_browser">在浏览器钟打开</string>
    <string name="copy_success">复制成功</string>
    <string name="collect_success">收藏成功</string>

    <!-- 关于 -->
    <string name="codegank_detail">CodeGank，每日分享妹子图和技术干货，还有供大家中午休息的休闲视频</string>
    <string name="project_address">开源地址</string>
    <string name="xyscience_codegank">XYScience/CodeGank</string>
    <string name="xyscience_codegank_address">https://github.com/XYScience/CodeGank</string>
    <string name="xyscience_codegank_issues">XYScience/CodeGank/issues</string>
    <string name="xyscience_codegank_issues_address">https://github.com/XYScience/CodeGank/issues</string>
    <string name="gank_source">App数据</string>
    <string name="gank_io">干货集中营</string>
    <string name="gank_io_address">http://gank.io/</string>
    <string name="issues">报告错误</string>
    <string name="libraries_used">开源项目</string>
    <string name="reactivex_rxjava">ReactiveX/RxJava</string>
    <string name="reactivex_rxjava_address">https://github.com/ReactiveX/RxJava</string>
    <string name="reactivex_rxandroid">ReactiveX/RxAndroid</string>
    <string name="reactivex_rxandroid_address">https://github.com/ReactiveX/RxAndroid</string>
    <string name="square_retrofit">square/retrofit</string>
    <string name="square_retrofit_address">https://github.com/square/retrofit</string>
    <string name="glide">bumptech/glide</string>
    <string name="glide_address">https://github.com/bumptech/glide</string>
    <string name="picasso">square/picasso</string>
    <string name="picasso_address">https://github.com/square/picasso</string>
    <string name="butterknife">JakeWharton/butterknife</string>
    <string name="butterknife_address">https://github.com/JakeWharton/butterknife</string>
    <string name="open_source_awesome">开源大法好</string>

</resources>
