<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".toolbar.LightToolbarActivity">

    <item
        android:id="@+id/menu_share"
        android:icon="@drawable/ic_share_white"
        android:orderInCategory="1"
        android:title="@string/share"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_save_img"
        android:orderInCategory="1"
        android:title="@string/save_img"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_save_as_wallpaper"
        android:orderInCategory="1"
        android:title="@string/save_as_wallpaper"
        app:showAsAction="never" />

</menu>