<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/coordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <include layout="@layout/app_bar_main"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingTop="16dp"
                android:text="@string/flow_control"
                android:textColor="@color/colorAccent"
                android:textSize="14sp"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="16dp">

                <android.support.v7.widget.AppCompatCheckBox
                    android:id="@+id/cb_smart_no_pic_model"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"/>

                <TextView
                    android:id="@+id/tv_smart_no_pic_model"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/smart_no_pic_model"
                    android:textColor="@color/textPrimary"
                    android:textSize="16sp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_smart_no_pic_model"
                    android:layout_marginTop="2dp"
                    android:text="@string/smart_no_pic_model_detail"
                    android:textColor="@color/textSecondary"
                    android:textSize="14sp"/>

            </RelativeLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingTop="16dp"
                android:text="@string/browse_control"
                android:textColor="@color/colorAccent"
                android:textSize="14sp"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="16dp">

                <android.support.v7.widget.AppCompatCheckBox
                    android:id="@+id/cb_chrome_custom_tab"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"/>

                <TextView
                    android:id="@+id/tv_chrome_custom_tab"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/use_chrome_custom_tab"
                    android:textColor="@color/textPrimary"
                    android:textSize="16sp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_chrome_custom_tab"
                    android:layout_marginTop="2dp"
                    android:layout_toLeftOf="@+id/cb_chrome_custom_tab"
                    android:text="@string/use_chrome_custom_tab_detail"
                    android:textColor="@color/textSecondary"
                    android:textSize="14sp"/>

            </RelativeLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingTop="16dp"
                android:text="@string/clear_data"
                android:textColor="@color/colorAccent"
                android:textSize="14sp"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:background="@drawable/shape_white_bg_bottom_line"
                android:orientation="horizontal"
                android:paddingBottom="16dp"
                android:paddingTop="16dp">

                <android.support.v7.widget.AppCompatCheckBox
                    android:id="@+id/cb_quit_clear_cache"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"/>

                <TextView
                    android:id="@+id/tv_quit_clear_data"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/quit_clear_cache"
                    android:textColor="@color/textPrimary"
                    android:textSize="16sp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_quit_clear_data"
                    android:layout_marginTop="2dp"
                    android:text="@string/quit_clear_cache_detail"
                    android:textColor="@color/textSecondary"
                    android:textSize="14sp"/>

            </RelativeLayout>

            <LinearLayout
                android:id="@+id/ll_clear_cache"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/clear_cache"
                    android:textColor="@color/textPrimary"
                    android:textSize="16sp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:text="@string/clear_cache_detail"
                    android:textColor="@color/textSecondary"
                    android:textSize="14sp"/>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</android.support.design.widget.CoordinatorLayout>